objects/TILBP__TICustomCourseField__c.object
<CustomObject>
    <fields>
        <fullName>TILBP__Content__c</fullName>
        <label>Content</label>
        <referenceTo>TILBP__TI_Content__c</referenceTo>
        <relationshipLabel>TI Custom Course Fields</relationshipLabel>
        <relationshipName>TI_Custom_Course_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TILBP__Field__c</fullName>
        <label>Field</label>
        <referenceTo>TILBP__TICustomField__c</referenceTo>
        <relationshipLabel>TI Custom Course Fields</relationshipLabel>
        <relationshipName>TI_Custom_Course_Fields</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TILBP__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TI Custom Course Field</label>
    <nameField>
        <displayFormat>TICCF{0000000}</displayFormat>
        <label>TI Custom Course Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TI Custom Course Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>